--- a/slideshow/package.json
+++ b/slideshow/package.json
@@ -43,7 +43,7 @@
   "deprecated": false,
   "description": "Observe and Control Slideshow Applications",
   "devDependencies": {
-    "grunt": "~1.0.1",
+    "grunt": ">=1.3.0",
     "grunt-cli": "~1.2.0",
     "grunt-contrib-clean": "~1.1.0",
     "grunt-contrib-jshint": "~1.1.0",
